# Probability_Calculator

./: README.md  pyproject.toml
calc/: probability_calc.py
tests/: probability_calc_test.py
