[tool.poetry]
name = "probability-calculator"
version = "0.1.0"
description = ""
authors = ["dtzz81 <denisa.turkova@madetech.com>"]
readme = "README.md"
packages = [{include = "probability_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
